--- a/Android/FamilyParking2/app/src/main/res/layout/fragment_car.xml
+++ b/Android/FamilyParking2/app/src/main/res/layout/fragment_car.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:wheel="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/soft_gray_transparent"
@@ -14,6 +15,42 @@
         android:layout_margin="10dp"
         android:background="@drawable/card_layout"
         android:divider="@drawable/divider"/>
+
+    <RelativeLayout
+        android:id="@+id/car_rl"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/white">
+
+        <TextView
+            android:id="@+id/info_car_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="@string/no_car"
+            android:textColor="@color/gray"
+            android:textSize="18sp"/>
+
+        <ImageView
+            android:id="@+id/logo_car_iv"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_above="@id/info_car_tv"
+            android:layout_marginBottom="15dp"
+            android:layout_centerHorizontal="true"
+            android:src="@drawable/add_car"/>
+
+        <com.pnikosis.materialishprogress.ProgressWheel
+            android:id="@+id/car_info_progress"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
+            android:layout_above="@id/info_car_tv"
+            android:layout_marginBottom="15dp"
+            android:layout_centerHorizontal="true"
+            wheel:matProg_barColor="@color/blue"
+            wheel:matProg_progressIndeterminate="true" />
+
+    </RelativeLayout>
 
 </RelativeLayout>
 
