--- a/Android/FamilyParking2/app/src/main/res/drawable/card_layout.xml
+++ b/Android/FamilyParking2/app/src/main/res/drawable/card_layout.xml
@@ -2,14 +2,18 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
    <item>
       <shape android:shape="rectangle">
-         <solid android:color="@color/gray_transparent"/>
+          <gradient
+              android:startColor="@color/black_strong_transparent"
+              android:endColor="@color/black_light_transparent"
+              android:angle="270"/>
+
          <corners android:radius="2dp" />
       </shape>
    </item>
 
    <item
-      android:left="0dp"
-      android:right="0dp"
+      android:left="1dp"
+      android:right="1dp"
       android:top="0dp"
       android:bottom="2dp">
       <shape android:shape="rectangle">
