--- a/Android/FamilyParking2/app/src/main/res/drawable/divider.xml
+++ b/Android/FamilyParking2/app/src/main/res/drawable/divider.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="line">
     <gradient
-        android:startColor="@color/ligth_gray"
+        android:startColor="@color/light_gray"
         android:centerColor="@color/gray"
-        android:endColor="@color/ligth_gray"/>
+        android:endColor="@color/light_gray"/>
 </shape>
