--- a/Android/FamilyParking2/app/src/main/res/values/color.xml
+++ b/Android/FamilyParking2/app/src/main/res/values/color.xml
@@ -13,6 +13,7 @@
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
     <color name="black_strong_transparent">#01000000</color>
+    <color name="black_light_light_transparent">#15000000</color>
     <color name="black_light_transparent">#25000000</color>
     <color name="light_gray">#C2C2C2</color>
     <color name="gray">@android:color/darker_gray</color>
