--- a/Android/FamilyParking2/app/src/main/res/layout/car_item.xml
+++ b/Android/FamilyParking2/app/src/main/res/layout/car_item.xml
@@ -45,15 +45,13 @@
                 android:layout_centerVertical="true"
                 android:layout_alignParentRight="true"
                 android:background="@drawable/circle_blue">
-
                 <ImageView
                     android:id="@+id/bluetooth_iv_ok"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
                     android:layout_centerInParent="true"
-                    android:src="@android:drawable/stat_sys_data_bluetooth"
+                    android:background="@android:drawable/stat_sys_data_bluetooth"
                     android:backgroundTint="@color/white"/>
-
             </RelativeLayout>
 
             <RelativeLayout
@@ -70,9 +68,44 @@
                     android:layout_width="20dp"
                     android:layout_height="20dp"
                     android:layout_centerInParent="true"
-                    android:src="@android:drawable/stat_sys_data_bluetooth"
+                    android:background="@android:drawable/stat_sys_data_bluetooth"
                     android:backgroundTint="@color/light_gray"/>
+            </RelativeLayout>
 
+            <RelativeLayout
+                android:id="@+id/park_circle_ok"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="10dp"
+                android:layout_toLeftOf="@id/bluetooth_circle_ko"
+                android:background="@drawable/circle_blue">
+                <ImageView
+                    android:id="@+id/park_iv_ok"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_centerInParent="true"
+                    android:background="@drawable/parking"
+                    android:backgroundTint="@color/white"/>
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/park_circle_ko"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:visibility="gone"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="10dp"
+                android:layout_toLeftOf="@id/bluetooth_circle_ko"
+                android:background="@drawable/circle_grey">
+
+                <ImageView
+                    android:id="@+id/park_iv_ko"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_centerInParent="true"
+                    android:background="@drawable/parking"
+                    android:backgroundTint="@color/light_gray"/>
             </RelativeLayout>
 
             <RelativeLayout
