--- a/Android/FamilyParking2/app/src/main/res/layout/contact_4edit_item.xml
+++ b/Android/FamilyParking2/app/src/main/res/layout/contact_4edit_item.xml
@@ -24,7 +24,7 @@
         android:textStyle="normal"
         android:textSize="25sp"
         android:textColor="@color/white"
-        android:background="@drawable/add_group"/>
+        android:background="@drawable/user"/>
 
 </RelativeLayout>
 
