--- a/Android/FamilyParking2/app/src/main/res/layout/contact_item.xml
+++ b/Android/FamilyParking2/app/src/main/res/layout/contact_item.xml
@@ -30,7 +30,7 @@
             android:textStyle="normal"
             android:textSize="25sp"
             android:textColor="@color/white"
-            android:background="@drawable/add_group"
+            android:background="@drawable/user"
             android:layout_toRightOf="@id/contact_image_iv"
             android:layout_toEndOf="@id/contact_image_iv"/>
 
