--- a/Android/FamilyParking2/app/src/main/res/layout/fragment_map.xml
+++ b/Android/FamilyParking2/app/src/main/res/layout/fragment_map.xml
@@ -34,12 +34,12 @@
 
     <Button
         android:id="@+id/toPark"
-        android:layout_width="55dp"
-        android:layout_height="55dp"
+        android:layout_width="65dp"
+        android:layout_height="65dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="10dp"
-        android:background="@drawable/park"
+        android:background="@drawable/button_park"
         android:visibility="invisible"
         android:clickable="false"
         android:onClick="onClick_Parking"/>
